--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
   src="https://www.youtube.com/embed/GItJBJqVnXM"
   frameborder="0"
   allowfullscreen>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/V9lb4uBkWNk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/V9lb4uBkWNk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          </iframe>
       </div>
 
       <!-- Back to top button -->
