--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +20,8 @@
       align-items: center;
       gap: 1rem;
       margin-left: auto;
-      flex-wrap: wrap; /* responsive */
+      flex-wrap: wrap;
+      /* responsive */
     }
 
     .custom-orange-btn,
@@ -121,6 +123,7 @@
     }
   </style>
 </head>
+
 <body>
   <!-- Navbar -->
   <nav class="navbar custom-navbar-bg">
@@ -173,12 +176,13 @@
         <iframe src="https://www.youtube.com/embed/0-chLJbtL8Q?si=qR6zv65nijWHF7eG" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com/embed/9CzWdAGG5Ms?si=IAQesEeki2J5MS_7" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com/embed/Ii-K6TaPH4w?si=PQ1ibKPwPwtQIEji" allowfullscreen></iframe>
-        <iframe width="560" height="315"
-  src="https://www.youtube.com/embed/GItJBJqVnXM"
-  frameborder="0"
-  allowfullscreen>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/V9lb4uBkWNk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-          </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TvQJ_fQH4w0?si=ciuIBdJoko_Vb8eO"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qRzen-jxnoA?si=i74kca_rTec5N969" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dnzoHzVhDmQ?si=IbjvPsFDSlpwb9Zn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BpHPcqiKwps?si=wQmmrMUTmwOKFs0m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
 
       <!-- Back to top button -->
@@ -190,4 +194,5 @@
     </div>
   </div>
 </body>
+
 </html>
